--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,15 @@ keywords = ["jwt", "crypto", "ed25519", "security", "webassembly"]
 categories = ["cryptography", "authentication", "wasm"]
 
 [dependencies]
-log = "0.4.14"
-env_logger = "0.8.2"
-serde_derive = "1.0.123"
-serde = "1.0.123"
-nkeys = "0.1.0"
-base64 = "0.13.0"
-serde_json = "1.0.61"
-nuid = "0.3.0"
-parity-wasm = "0.42.1"
-lazy_static = "1.4.0"
-ring = "0.16.20"
-data-encoding = "2.3.2"
-chrono-humanize = "0.2.1"
-chrono = "0.4.19"
+serde_derive = "1.0"
+serde = "1.0"
+nkeys = { path = "../nkeys" }
+base64 = "0.13"
+serde_json = "1.0"
+nuid = "0.3"
+parity-wasm = "0.42"
+lazy_static = "1.4"
+ring = "0.16"
+data-encoding = "2.3"
+chrono-humanize = "0.2"
+chrono = "0.4"
